--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ Thumbs.db
 
 # Agent specific
 browser-profiles/
+uc_browser-profiles/
+no_browser-profiles/
 chrome-version/
 firefox-version/
 .last_version
