--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,10 @@ logs/
 dev/
 docs/
 tests/
+
+# nodriver 연구 중 (푸시 제외)
+no_lib/
+no_browser-profiles/
+no_test_*.py
+requirements-nodriver.txt
+NODRIVER_WINDOWS_TLS_RESEARCH.md
